--- a/Part_2_EDA.ipynb
+++ b/Part_2_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4abf05a2",
+   "id": "39c3eae8",
    "metadata": {},
    "source": [
     "<img src=\"http://imgur.com/1ZcRyrc.png\" style=\"float: left; margin: 20px; height: 55px\">\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a733e4e",
+   "id": "84cd4728",
    "metadata": {},
    "source": [
     "# Background"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7395668e",
+   "id": "b53d245e",
    "metadata": {},
    "source": [
     "West Nile Virus(WNV) is most commonly spread to humans through infected mosquitoes. Around 20% of the people who become infected with the virus develop symptoms ranging from a persistent fever, to serious neurological illnesses that can result in death.\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ecada2",
+   "id": "b3c5731d",
    "metadata": {},
    "source": [
     "# Problem Statement"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24dca64a",
+   "id": "60481be9",
    "metadata": {},
    "source": [
     "Build a classification model of at least 90% recall score to predict areas of the city where there are mosquitoes carrying the West Nile Virus. Optimise current mosquito control measures to effectively and efficiently tackle the mosquito problem and create a desirable cost-benefit analysis."
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a8def5e",
+   "id": "0efdeb76",
    "metadata": {},
    "source": [
     "## This notebook consists of Exploratory Data Analysis. Please refer to the relevant notebooks for the other parts.\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6acdffc5",
+   "id": "d9b707a3",
    "metadata": {},
    "source": [
     "# Data Dictionary"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a25dc7f",
+   "id": "f6cc0f3b",
    "metadata": {},
    "source": [
     "#### train.csv, test.csv\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ba5bcb",
+   "id": "f78e58c9",
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "becaa66a",
+   "id": "4a314fd7",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis - Train Data"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f333d339",
+   "id": "fad4b6ce",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0d6886c7",
+   "id": "a702682d",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x18c0ba811f0>"
+       "<matplotlib.lines.Line2D at 0x20e5cba6fd0>"
       ]
      },
      "execution_count": 52,
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e67920a4",
+   "id": "42e33ed6",
    "metadata": {},
    "source": [
     "## Features Selection"
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f9a1a9f",
+   "id": "bbf615b7",
    "metadata": {},
    "source": [
     "From the exploratory data analysis, we have identified factors such as address, mosquito species, month as well as weather conditions and they are likely to impact the presence of west nile virus in mosquitoes. These factors generally affect the breeding of the mosquitoes and their activities. Certain areas and weather conditions are more ideal for mosquito breeding. In addition, studies have shown that the infection rate of wnv depends on the ecology, which may have resulted in the observed seasonality. Studies have also shown that mosquito species even within the family of culex have varied competency as a vector of west nile virus.\n",
@@ -2089,7 +2089,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a2c355d8",
+   "id": "58038a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2103,7 +2103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebff5476",
+   "id": "76910ab7",
    "metadata": {},
    "source": [
     "## Train Data with selected features"
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "6f28d6e6",
+   "id": "7f5b4d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9a80f1",
+   "id": "4d4f9f59",
    "metadata": {},
    "source": [
     "## Test Data with selected features"
@@ -2135,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d69ed806",
+   "id": "2c0a6681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2153,7 +2153,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b7f34d5f",
+   "id": "152ee99c",
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2161,7 @@
      "output_type": "stream",
      "text": [
       "Address\n",
-      "{'South Oglesby Avenue, Chicago, IL, USA', '1400 West 112th Street, Chicago, IL 60643, USA', '1200 West 120th Street, Chicago, IL 60643, USA', '4600 North Melvina Avenue, Chicago, IL 60630, USA', '1100 South Loomis Street, Chicago, IL 60607, USA', '4000 North Kedvale Avenue, Chicago, IL 60641, USA', '3400 North Long Avenue, Chicago, IL 60641, USA', '3700 North Kilbourn Avenue, Chicago, IL 60641, USA', '2600 East 136th Street, Chicago, IL 60633, USA', '5100 West 63rd Place, Chicago, IL 60638, USA', 'South Baltimore Avenue, Chicago, IL 60617, USA', '2900 North Kenneth Avenue, Chicago, IL 60641, USA', '6500 West Dakin Street, Chicago, IL 60634, USA'}\n",
+      "{'3700 North Kilbourn Avenue, Chicago, IL 60641, USA', '6500 West Dakin Street, Chicago, IL 60634, USA', '1200 West 120th Street, Chicago, IL 60643, USA', '4000 North Kedvale Avenue, Chicago, IL 60641, USA', '3400 North Long Avenue, Chicago, IL 60641, USA', '1400 West 112th Street, Chicago, IL 60643, USA', 'South Baltimore Avenue, Chicago, IL 60617, USA', '1100 South Loomis Street, Chicago, IL 60607, USA', '2600 East 136th Street, Chicago, IL 60633, USA', '2900 North Kenneth Avenue, Chicago, IL 60641, USA', '4600 North Melvina Avenue, Chicago, IL 60630, USA', 'South Oglesby Avenue, Chicago, IL, USA', '5100 West 63rd Place, Chicago, IL 60638, USA'}\n",
       "\n",
       "\n",
       "Species\n",
@@ -2173,15 +2173,15 @@
       "\n",
       "\n",
       "Street\n",
-      "{' W 112TH ST', ' N KILBOURN AVE', ' N KENNETH AVE', ' W 120TH ST', ' S OGLESBY AVE', ' W 63RD PL', ' S BALTIMORE AVE', ' S LOOMIS ST', ' N MELVINA AVE', ' W DAKIN ST', ' E 136TH ST'}\n",
+      "{' N KENNETH AVE', ' S OGLESBY AVE', ' S BALTIMORE AVE', ' N KILBOURN AVE', ' W 112TH ST', ' N MELVINA AVE', ' E 136TH ST', ' W 120TH ST', ' W 63RD PL', ' S LOOMIS ST', ' W DAKIN ST'}\n",
       "\n",
       "\n",
       "Trap\n",
-      "{'T090C', 'T218B', 'T002B', 'T200B', 'T002A', 'T234', 'T090B', 'T128A', 'T218A', 'T200A', 'T065A', 'T090A', 'T218C'}\n",
+      "{'T002B', 'T234', 'T002A', 'T090C', 'T090B', 'T218C', 'T218A', 'T218B', 'T200B', 'T128A', 'T090A', 'T200A', 'T065A'}\n",
       "\n",
       "\n",
       "AddressNumberAndStreet\n",
-      "{'3700  N KILBOURN AVE, Chicago, IL', '1400  W 112TH ST, Chicago, IL', '6500  W DAKIN ST, Chicago, IL', '3400  N LONG AVE, Chicago, IL', '1200  S BALTIMORE AVE, Chicago, IL', '1200  W 120TH ST, Chicago, IL', '1100  S LOOMIS ST, Chicago, IL', '1000  S OGLESBY AVE, Chicago, IL', '4000  N KEDVALE AVE, Chicago, IL', '2900  N KENNETH AVE, Chicago, IL', '4600  N MELVINA AVE, Chicago, IL', '2600  E 136TH ST, Chicago, IL', '5100  W 63RD PL, Chicago, IL'}\n",
+      "{'1100  S LOOMIS ST, Chicago, IL', '5100  W 63RD PL, Chicago, IL', '2600  E 136TH ST, Chicago, IL', '1000  S OGLESBY AVE, Chicago, IL', '1200  S BALTIMORE AVE, Chicago, IL', '6500  W DAKIN ST, Chicago, IL', '3400  N LONG AVE, Chicago, IL', '2900  N KENNETH AVE, Chicago, IL', '1400  W 112TH ST, Chicago, IL', '3700  N KILBOURN AVE, Chicago, IL', '4000  N KEDVALE AVE, Chicago, IL', '4600  N MELVINA AVE, Chicago, IL', '1200  W 120TH ST, Chicago, IL'}\n",
       "\n",
       "\n",
       "Latitude\n",
@@ -2200,7 +2200,7 @@
     }
    ],
    "source": [
-    "# Display the value counts and the number of unique values of each column\n",
+    "# Display the difference of the values in train and test datasets\n",
     "\n",
     "for column in trap_test.columns[2:11]:\n",
     "    print(column)\n",
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1669b176",
+   "id": "9f3702d2",
    "metadata": {},
    "source": [
     "#### Observations\n",
@@ -2220,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d2ca165a",
+   "id": "23336dad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0daba2cd",
+   "id": "88c317f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2246,7 +2246,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "fc2a9603",
+   "id": "54c24314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2260,7 +2260,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "53466d93",
+   "id": "ee6c8b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2272,7 +2272,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "f7c14c91",
+   "id": "9c13b9d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2284,7 +2284,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9797610c",
+   "id": "4d3cb50e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2302,7 +2302,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "81d30ce9",
+   "id": "d75aca0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b77e17da",
+   "id": "c0cb6ee0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2326,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "18b8bedc",
+   "id": "fc0d6b26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2338,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "cc2fef13",
+   "id": "36b8e4da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2351,7 +2351,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "d8808895",
+   "id": "9679242e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2361,14 +2361,6 @@
     "trap_test_weather_sel_feat = pd.concat([trap_test_weather_full[sel_features],trap_test[['Id']]],axis=1)\n",
     "trap_test_weather_sel_feat.to_csv('data/trap_test_weather_sel_feat.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33164a13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
