--- a/Part_3_Modelling.ipynb
+++ b/Part_3_Modelling.ipynb
@@ -91,7 +91,7 @@
     "|**AvgSpeed_14daysavg**|*float*|The average daily wind speed of the past 14 days (units in MPH)|\n",
     "|**PrecipTotal_14daysavg**|*float*|The average of the total precipitation of the past 14 days (units in inches)|\n",
     "|**r_humidity_14daysavg**|*float*|The average relative humidity of the past 14 days (units in percentage)|\n",
-    "|**WnvPresent**|*int*|Label for presence of west nile virus in mosquito (0 indicates the absence of wvn and 1 indicates the presence of wnv)|"
+    "|**WnvPresent**| *int* | Whether West Nile Virus was present in these mosquitos. 1 means WNV is present, and 0 means not present. |"
    ]
   },
   {
@@ -2019,11 +2019,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>WetBulb_14daysavg</th>\n",
-       "      <td>0.148770</td>\n",
+       "      <td>0.146367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Species_w</th>\n",
        "      <td>0.102627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tavg_14daysavg</th>\n",
+       "      <td>0.036913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DewPoint_14daysavg</th>\n",
@@ -2034,16 +2038,8 @@
        "      <td>0.029461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tavg_14daysavg</th>\n",
-       "      <td>0.028947</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>ResultSpeed_14daysavg</th>\n",
        "      <td>0.009898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cool_14daysavg</th>\n",
-       "      <td>0.008272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AvgSpeed_14daysavg</th>\n",
@@ -2053,6 +2049,10 @@
        "      <th>PrecipTotal_14daysavg</th>\n",
        "      <td>0.004329</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cool_14daysavg</th>\n",
+       "      <td>0.002709</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2061,15 +2061,15 @@
        "                              0\n",
        "Month_w                0.431371\n",
        "Address_w              0.192144\n",
-       "WetBulb_14daysavg      0.148770\n",
+       "WetBulb_14daysavg      0.146367\n",
        "Species_w              0.102627\n",
+       "Tavg_14daysavg         0.036913\n",
        "DewPoint_14daysavg     0.036622\n",
        "r_humidity_14daysavg   0.029461\n",
-       "Tavg_14daysavg         0.028947\n",
        "ResultSpeed_14daysavg  0.009898\n",
-       "Cool_14daysavg         0.008272\n",
        "AvgSpeed_14daysavg     0.007560\n",
-       "PrecipTotal_14daysavg  0.004329"
+       "PrecipTotal_14daysavg  0.004329\n",
+       "Cool_14daysavg         0.002709"
       ]
      },
      "execution_count": 29,
@@ -2688,7 +2688,7 @@
        "      <th>2</th>\n",
        "      <td>9</td>\n",
        "      <td>1000 East 67th Street, Chicago, IL 60637, USA</td>\n",
-       "      <td>0.632945</td>\n",
+       "      <td>0.636843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2706,7 +2706,7 @@
        "      <th>5</th>\n",
        "      <td>9</td>\n",
        "      <td>1000 North Central Park Avenue, Chicago, IL 60651, USA</td>\n",
-       "      <td>0.700383</td>\n",
+       "      <td>0.703900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -2740,10 +2740,10 @@
        "   Month                                                 Address  wnv_prob\n",
        "0      7           1000 East 67th Street, Chicago, IL 60637, USA  0.551250\n",
        "1      8           1000 East 67th Street, Chicago, IL 60637, USA  0.722570\n",
-       "2      9           1000 East 67th Street, Chicago, IL 60637, USA  0.632945\n",
+       "2      9           1000 East 67th Street, Chicago, IL 60637, USA  0.636843\n",
        "3      7  1000 North Central Park Avenue, Chicago, IL 60651, USA  0.622091\n",
        "4      8  1000 North Central Park Avenue, Chicago, IL 60651, USA  0.804733\n",
-       "5      9  1000 North Central Park Avenue, Chicago, IL 60651, USA  0.700383\n",
+       "5      9  1000 North Central Park Avenue, Chicago, IL 60651, USA  0.703900\n",
        "6      7           1000 West 95th Street, Chicago, IL 60643, USA  0.540088\n",
        "7      8           1000 West 95th Street, Chicago, IL 60643, USA  0.722339\n",
        "8      7      1100 North Artesian Avenue, Chicago, IL 60622, USA  0.551250\n",
@@ -2869,7 +2869,7 @@
        "      <td>1000 East 67th Street, Chicago, IL 60637, USA</td>\n",
        "      <td>0.551250</td>\n",
        "      <td>0.722570</td>\n",
-       "      <td>0.632945</td>\n",
+       "      <td>0.636843</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2877,7 +2877,7 @@
        "      <td>1000 North Central Park Avenue, Chicago, IL 60651, USA</td>\n",
        "      <td>0.622091</td>\n",
        "      <td>0.804733</td>\n",
-       "      <td>0.700383</td>\n",
+       "      <td>0.703900</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2893,7 +2893,7 @@
        "      <td>1100 North Artesian Avenue, Chicago, IL 60622, USA</td>\n",
        "      <td>0.551250</td>\n",
        "      <td>0.780859</td>\n",
-       "      <td>0.688358</td>\n",
+       "      <td>0.691954</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2917,7 +2917,7 @@
        "      <td>South Stony Island Avenue, Chicago, IL, USA</td>\n",
        "      <td>0.551250</td>\n",
        "      <td>0.780859</td>\n",
-       "      <td>0.688358</td>\n",
+       "      <td>0.691954</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2933,7 +2933,7 @@
        "      <td>South Vincennes Avenue, Chicago, IL, USA</td>\n",
        "      <td>0.551250</td>\n",
        "      <td>0.780859</td>\n",
-       "      <td>0.681891</td>\n",
+       "      <td>0.685528</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2941,13 +2941,13 @@
        "      <td>University of Illinois at Chicago, 1100 South Ashland Avenue, Chicago, IL 60607, USA</td>\n",
        "      <td>0.551250</td>\n",
        "      <td>0.769296</td>\n",
-       "      <td>0.686060</td>\n",
+       "      <td>0.689671</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>West Garfield Boulevard, Chicago, IL, USA</td>\n",
-       "      <td>0.572723</td>\n",
+       "      <td>0.567126</td>\n",
        "      <td>0.769296</td>\n",
        "      <td>0.761535</td>\n",
        "      <td>NaN</td>\n",
@@ -2972,17 +2972,17 @@
        "97                                                West Garfield Boulevard, Chicago, IL, USA   \n",
        "\n",
        "Month         7         8         9  10  \n",
-       "0      0.551250  0.722570  0.632945 NaN  \n",
-       "1      0.622091  0.804733  0.700383 NaN  \n",
+       "0      0.551250  0.722570  0.636843 NaN  \n",
+       "1      0.622091  0.804733  0.703900 NaN  \n",
        "2      0.540088  0.722339       NaN NaN  \n",
-       "3      0.551250  0.780859  0.688358 NaN  \n",
+       "3      0.551250  0.780859  0.691954 NaN  \n",
        "4      0.544875  0.711354  0.616219 NaN  \n",
        "..          ...       ...       ...  ..  \n",
-       "93     0.551250  0.780859  0.688358 NaN  \n",
+       "93     0.551250  0.780859  0.691954 NaN  \n",
        "94          NaN  0.669479       NaN NaN  \n",
-       "95     0.551250  0.780859  0.681891 NaN  \n",
-       "96     0.551250  0.769296  0.686060 NaN  \n",
-       "97     0.572723  0.769296  0.761535 NaN  \n",
+       "95     0.551250  0.780859  0.685528 NaN  \n",
+       "96     0.551250  0.769296  0.689671 NaN  \n",
+       "97     0.567126  0.769296  0.761535 NaN  \n",
        "\n",
        "[98 rows x 5 columns]"
       ]
