--- a/Part_1_Data_Cleaning.ipynb
+++ b/Part_1_Data_Cleaning.ipynb
@@ -187,10 +187,10 @@
    "source": [
     "# Import relevant CSV files\n",
     "\n",
-    "weather = pd.read_csv('./data/weather.csv', parse_dates=True)\n",
-    "train = pd.read_csv('./data/train.csv', parse_dates=True)\n",
-    "test = pd.read_csv('./data/test.csv', parse_dates=True)\n",
-    "spray = pd.read_csv('./data/spray.csv', parse_dates=True)"
+    "weather = pd.read_csv('data/datasets/weather.csv', parse_dates=True)\n",
+    "train = pd.read_csv('data/datasets/train.csv', parse_dates=True)\n",
+    "test = pd.read_csv('data/datasets/test.csv', parse_dates=True)\n",
+    "spray = pd.read_csv('data/datasets/spray.csv', parse_dates=True)"
    ]
   },
   {
@@ -1986,8 +1986,8 @@
    "outputs": [],
    "source": [
     "# Save df as csv\n",
-    "weather.to_csv('./data/weather_clean.csv', index=False)\n",
-    "spray.to_csv('./data/spray_clean.csv', index=False)\n",
+    "weather.to_csv('data/datasets/weather_clean.csv', index=False)\n",
+    "spray.to_csv('data/datasets/spray_clean.csv', index=False)\n",
     "\n",
     "# No change has been made to train and test dataset"
    ]
@@ -2012,7 +2012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
